--- a/Styles/git.css
+++ b/Styles/git.css
@@ -16,12 +16,19 @@ body {
 header,
 footer {
     background-color: #252827;
-    color: white;
+    color: rgb(255, 255, 255);
     padding: 48px;
 
 }
 
+
 main {
     flex-grow: 1;
+}
+
+.main-content {
+    padding: 48px;
+    width: 50%;
+    background-color: #D0B8AC;
 }
 
